--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -542,131 +542,218 @@
   justify-content: space-between;
 }
 
-.container .topDiv {
-  text-align: center;
-  margin-top: 40px;
-  font-family: "Inter", sans-serif;
+.container .row {
+  display: flex;
+  margin-top: 50px;
 }
-.container .topDiv h1 {
-  font-weight: 400;
+.container .row .box .firstContent img {
+  width: 831px;
+  border-radius: 10px;
 }
-.container .topDiv p {
+.container .row .box .firstContent .post .info {
+  padding: 13px 0px;
+}
+.container .row .box .firstContent .post .info i {
+  color: lightskyblue;
+  margin-left: 5px;
+  font-size: 13px;
+}
+.container .row .box .firstContent .post .info a {
+  text-decoration: none;
+}
+.container .row .box .firstContent .post .info a span {
+  color: #71778e;
   font-size: 14px;
   font-family: "Inter", sans-serif;
+  margin-left: 2px;
+  font-weight: 600;
 }
-.container .boxes {
-  display: flex;
+.container .row .box .firstContent .post .info a:hover span {
+  text-decoration: underline;
 }
-.container .boxes .col {
-  background-color: #f3f3f6;
-  height: 200px;
-  margin-left: 40px;
-  border-radius: 7px;
-  border: 1px solid #edeef5;
+.container .row .box .firstContent .post .contentText a {
+  text-decoration: none;
+  color: #202435;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 35px;
 }
-.container .boxes .texts {
-  text-align: center;
-  padding: 40px;
-}
-.container .boxes .texts i {
-  font-size: 36px;
-  color: #233a95;
-}
-.container .boxes .texts h5 {
-  margin-top: 25px;
+.container .row .box .firstContent .post .contentText p {
   font-size: 15px;
-  font-weight: 500;
   font-family: "Inter", sans-serif;
-}
-.container .boxes .texts p {
-  font-family: "Inter", sans-serif;
+  color: #202435;
   font-weight: 400;
   letter-spacing: 0;
-  font-size: 13px;
+  padding: 10px 0px;
+  line-height: 1.8;
 }
-.container .sendus {
-  padding: 0px 18px;
-}
-.container .sendus .sendDiv {
-  height: 800px;
-  background-color: white;
-  border-radius: 7px;
-  border: 1px solid #edeef5;
-  margin-left: 20px;
-  box-shadow: 0px 1px 23px -6px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 0px 1px 23px -6px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 1px 23px -6px rgba(0, 0, 0, 0.75);
-}
-.container .sendus .sendDiv .headerContent {
-  text-align: center;
-  padding: 80px 130px;
-}
-.container .sendus .sendDiv .headerContent h2 {
-  font-size: 40px;
-  font-family: "Inter", sans-serif;
-  color: #202435;
-  font-weight: 400;
-}
-.container .sendus .sendDiv .headerContent p {
-  font-size: 14px;
-  font-family: "Inter", sans-serif;
-  color: #202435;
-  height: 105px;
-  border-bottom: 1px solid #edeef5;
-}
-.container .sendus .sendDiv .container {
-  padding: 0px 144px;
-  margin-top: -45px;
-}
-.container .sendus .sendDiv .container .row {
-  display: flex;
-}
-.container .sendus .sendDiv .container .row .box {
-  height: 80px;
-}
-.container .sendus .sendDiv .container .row .box input {
-  width: 370px;
-  margin-top: 4px;
-  height: 40px;
-  background-color: #f3f4f7;
-  border: none;
-  outline-style: none;
-  border-radius: 3px;
-  padding: 0px 20px;
-}
-.container .sendus .sendDiv .container .row .box .sub {
-  width: 776px;
-  height: 40px;
-}
-.container .sendus .sendDiv .container .row .box .mes {
-  width: 776px;
-  height: 120px;
-}
-.container .sendus .sendDiv .container .row .box label {
-  font-family: "Inter", sans-serif;
-  color: #202435;
-  font-size: 13px;
-}
-.container .sendus .sendDiv .container .row .box textarea {
-  padding: 8px 13px;
-  background-color: #f3f4f7;
-  border-radius: 3px;
-  outline-style: none;
-  border: none;
-  resize: none;
-}
-.container .sendus .sendDiv .container .row .box span {
-  font-size: 14px;
-  color: #dc3232;
-  font-family: "Inter", sans-serif;
-}
-.container .sendus .sendDiv .container .row .col {
-  margin-top: 10px;
-}
-.container .sendus .sendDiv .container button {
-  margin-top: 85px;
+.container .row .box .firstContent .post .contentText button {
   background-color: #233a95;
   font-family: "Inter", sans-serif;
-  padding: 11px 22px;
+  border: none;
   font-size: 14px;
-}/*# sourceMappingURL=contact.css.map */
+  padding: 10px 20px;
+}
+.container .row .box .pages {
+  text-align: center;
+  margin-top: 20px;
+}
+.container .row .box .pages a {
+  text-decoration: none;
+  padding: 5px 15px;
+  font-size: 14px;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+}
+.container .row .box .pages a #stPage {
+  color: white;
+}
+.container .row .box .pages a #ndPage {
+  color: #202435;
+}
+.container .row .box .pages a i {
+  color: #202435;
+}
+.container .row .box .pages a:hover {
+  border: 1px solid #f3f4f7;
+  border-radius: 50%;
+  padding: 10px 14px;
+  background-color: #f3f4f7;
+}
+.container .row .box .pages .stPage {
+  border: 1px solid #2bbef9;
+  border-radius: 50%;
+  padding: 10px 14px;
+  background-color: #2bbef9;
+}
+.container .row .box .pages .stPage:hover {
+  border: 1px solid #2bbef9;
+  border-radius: 50%;
+  padding: 10px 14px;
+  background-color: #2bbef9;
+}
+.container .row .box .search {
+  position: relative;
+}
+.container .row .box .search input {
+  height: 40px;
+  border: none;
+  border-radius: 3px;
+  background-color: #f3f4f7;
+  width: 100%;
+  padding: 0px 15px;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  outline: none;
+}
+.container .row .box .search i {
+  position: absolute;
+  cursor: pointer;
+  right: 18px;
+  top: 14px;
+  font-size: 14px;
+}
+.container .row .box .popular {
+  height: 450px;
+}
+.container .row .box .popular h4 {
+  font-family: "Dosis", sans-serif;
+  font-size: 0.9375rem;
+  font-weight: 600;
+}
+.container .row .box .popular .posts {
+  height: 360px;
+  border: 1px solid #c2c2d3;
+  border-radius: 7px;
+}
+.container .row .box .popular .posts .postContent {
+  padding: 22px 23px;
+}
+.container .row .box .popular .posts .postContent .img {
+  position: relative;
+}
+.container .row .box .popular .posts .postContent .img img {
+  border-radius: 50%;
+  width: 60px;
+}
+.container .row .box .popular .posts .postContent .img .num {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #2bbef9;
+  color: white;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  text-align: center;
+  position: absolute;
+  bottom: 40px;
+  left: 40px;
+  border: 1px solid white;
+}
+.container .row .box .popular .posts .postContent .text {
+  padding: 0px 6px;
+}
+.container .row .box .popular .posts .postContent .text a {
+  text-decoration: none;
+  color: #202435;
+  font-size: 13px;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+}
+.container .row .box .social {
+  height: 260px;
+}
+.container .row .box .social h4 {
+  font-family: "Dosis", sans-serif;
+  font-size: 0.9375rem;
+  font-weight: 600;
+}
+.container .row .box .social .medias a {
+  text-decoration: none;
+}
+.container .row .box .social .medias .col {
+  background-color: red;
+  margin-top: 3px;
+  height: 40px;
+  border-radius: 4px;
+  padding: 6px 12px;
+  color: white;
+}
+.container .row .box .social .medias .col span {
+  margin-left: 25px;
+  font-family: "Dosis", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+}
+.container .row .box .widget h4 {
+  font-family: "Dosis", sans-serif;
+  font-size: 0.9375rem;
+  font-weight: 600;
+}
+.container .row .box .widget .gif {
+  margin-top: 20px;
+}
+.container .row .box .widget .gif img {
+  width: 261px;
+}
+.container .row .box .tags {
+  padding: 3px 4px;
+}
+.container .row .box .tags h4 {
+  font-family: "Dosis", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+}
+.container .row .box .tags .tagsDiv a {
+  text-decoration: none;
+  border: 1px solid #edeef5;
+  text-align: center;
+  padding: 4px 11px;
+  margin-top: 10px;
+  line-height: 35px;
+}
+.container .row .box .tags .tagsDiv a span {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  color: black;
+}/*# sourceMappingURL=blog.css.map */
