--- a/assets/scss/blog.scss
+++ b/assets/scss/blog.scss
@@ -656,147 +656,254 @@
 
 
 
-.container {
-    .topDiv {
-        text-align: center;
-        margin-top: 40px;
-        font-family: "Inter", sans-serif;
+.container{
 
-        h1 {
-            font-weight: 400;
-        }
-
-        p {
-            font-size: 14px;
-            font-family: "Inter", sans-serif;
-        }
-    }
-
-    .boxes {
+    .row{
         display: flex;
-
-        .col {
-            background-color: #f3f3f6;
-            height: 200px;
-            margin-left: 40px;
-            border-radius: 7px;
-            border: 1px solid #edeef5;
-        }
-        .texts{
-            text-align: center;
-            padding: 40px;
-            i{
-                font-size: 36px;
-                color: #233a95;
-            }
-            h5{
-                margin-top: 25px;
-                font-size: 15px;
-                font-weight: 500;
-                font-family: "Inter", sans-serif;
-            }
-            p{
-                font-family: "Inter", sans-serif;
-                font-weight: 400;
-                letter-spacing: 0;
-                font-size: 13px;
-
-                
-            }
+        margin-top: 50px;
+        .box{
         
-        }
-    }
-    .sendus{
-        padding: 0px 18px;
-        .sendDiv{
-            height: 800px;
-            background-color: white;
-            border-radius: 7px;
-            border: 1px solid #edeef5;
-            margin-left: 20px;
-            box-shadow: 0px 1px 23px -6px rgba(0,0,0,0.75);
-            -webkit-box-shadow: 0px 1px 23px -6px rgba(0,0,0,0.75);
-            -moz-box-shadow: 0px 1px 23px -6px rgba(0,0,0,0.75);
-            .headerContent{
-                text-align: center;
-                padding: 80px 130px;
             
-            
-                h2{
-                    font-size: 40px;
-                    font-family: "Inter", sans-serif;
-                    color: #202435;
-                    font-weight: 400;
+            .firstContent{
+                img{
+                    width: 831px;
+                    border-radius: 10px;
                 }
-                p{
-                    font-size: 14px;
-                    font-family: "Inter", sans-serif;
-                    color: #202435;
-                    height: 105px;
-                    border-bottom: 1px solid #edeef5;
-                }
-            }
+                .post{
 
-            .container{
-                padding: 0px 144px;
-                margin-top: -45px;
-                .row{
-                    display: flex;
-                    .box{
-                    
-                        height: 80px;
-                        input{
-                            width: 370px;
-                            margin-top: 4px;
-                            height: 40px;
-                            background-color: #f3f4f7;
-                            border:none;
-                            outline-style: none;
-                            border-radius: 3px;
-                            padding: 0px 20px;
-                        
-                        }
-                        .sub{
-                            width: 776px;
-                            height: 40px;
-                        }
-                        .mes{
-                            width: 776px;
-                            height: 120px;
-                        }
-                        label{
-                            font-family: "Inter", sans-serif;
-                            color:#202435;
+                    .info{
+                        padding: 13px 0px;
+                        i{
+                            color: lightskyblue;
+                            margin-left: 5px;
                             font-size: 13px;
                         }
-                        textarea{
-                            padding: 8px 13px;
-                            background-color: #f3f4f7;
-                            border-radius: 3px;
-                            outline-style: none;
-                            border:none;
-                            resize: none;
+                        a{
+                            text-decoration: none;
+                            span{
+                                color: #71778e;
+                                font-size: 14px;
+                                font-family: "Inter", sans-serif;
+                                margin-left: 2px;
+                                font-weight: 600;
+                            }
                         }
-                        span{
-                            font-size: 14px;
-                            color: #dc3232;
-                            font-family: "Inter", sans-serif;
+                        a:hover span{
+                            text-decoration: underline;
                         }
                     }
-                    .col{
-                        margin-top: 10px;
+                    .contentText{
+                        a{
+                            text-decoration: none;
+                            color: #202435;
+                            font-family: "Inter", sans-serif;
+                            font-weight: 600;
+                            font-size: 35px;
+                        }
+                        p{
+
+                            font-size: 15px;
+                            font-family: "Inter", sans-serif;
+                            color: #202435;
+                            font-weight: 400;
+                            letter-spacing: 0;
+                            padding: 10px 0px;
+                            line-height: 1.8;
+                        }
+                        button{
+                            background-color: #233a95;
+                            font-family: "Inter", sans-serif;
+                            border: none;
+                            font-size: 14px;
+                            padding: 10px 20px;
+                        }
+                    }
+
+
+
+
+
+                }
+            }
+            .pages{
+                text-align: center;
+                margin-top: 20px;
+                a{
+                    text-decoration: none;
+                    padding: 5px 15px;
+                    font-size: 14px;
+                    font-family: "Inter", sans-serif;
+                    font-weight: 500;
+                    
+                    #stPage{
+                        color: white;
+                    
+                    }
+                    #ndPage{
+                        color: #202435;
+                    }
+                    i{
+                        color: #202435;
                     }
                 }
-                button{
-                    margin-top: 85px;
-                    background-color: #233a95;
+                a:hover{
+                    border:1px solid #f3f4f7;
+                    border-radius: 50%;
+                    padding: 10px 14px;
+                    background-color:#f3f4f7;
+                }
+                .stPage{
+                    border:1px solid #2bbef9;
+                    border-radius: 50%;
+                    padding: 10px 14px;
+                    background-color: #2bbef9;
+                }
+                .stPage:hover{
+                    border:1px solid #2bbef9;
+                    border-radius: 50%;
+                    padding: 10px 14px;
+                    background-color: #2bbef9;
+                }
+            }
+            .search{
+                position: relative;
+                input{
+                    height: 40px;
+                    border: none;
+                    border-radius: 3px;
+                    background-color: #f3f4f7;
+                    width: 100%;
+                    padding: 0px 15px;
                     font-family: "Inter", sans-serif;
-                    padding: 11px 22px;
+                    font-size: 14px;
+                    outline: none;
+                }
+                i{
+                    position: absolute;
+                    cursor: pointer;
+                    right: 18px;
+                    top: 14px;
                     font-size: 14px;
                 }
             }
-           
+            .popular{
+                height: 450px;
+                h4{
+                    font-family: "Dosis", sans-serif;
+                    font-size: .9375rem;
+                    font-weight: 600;
+                }
+                .posts{
+                    
+                    height: 360px;
+                    border: 1px solid #c2c2d3;
+                    border-radius: 7px;
+                    .postContent{
+                        padding: 22px 23px;
+                        .img{
+                            position: relative;
+                            img{
+                                border-radius: 50%;
+                                width: 60px;
+                            }
+                            .num{
+                                width: 20px;
+                                height: 20px;
+                                border-radius: 50%;
+                                background-color: #2bbef9;
+                                color: white;
+                                font-family: "Inter", sans-serif;
+                                font-size: 14px;
+                                text-align: center;
+                                position: absolute;
+                                bottom: 40px;
+                                left: 40px;
+                                border: 1px solid white;
+                            }
 
+                        }
+                        .text{
+                            padding: 0px 6px;
+                            a{
+                                text-decoration: none;
+                                color: #202435;
+                                font-size: 13px;
+                                font-family: "Inter", sans-serif;
+                                font-weight: 600;
+                                
+                            
+                            }
+                        }
+                    }
+                }
+            }
+            .social{
+                height: 260px;
+                
+                h4{
+                    font-family: "Dosis", sans-serif;
+                    font-size: .9375rem;
+                    font-weight: 600;
+                }
+                .medias{
+                
+                
+                    a{
+                        text-decoration: none;
+                    }
+                    .col{
+                        background-color: red;
+                        margin-top: 3px;
+                        height: 40px;
+                        border-radius: 4px;
+                        padding: 6px 12px;
+                        color: white;
+                        span{
+                            margin-left: 25px;
+                            font-family: "Dosis",sans-serif;
+                            font-size: 14px;
+                            font-weight: 600;
+                        }
+                    }
+                }
+            }
+            .widget{
+                h4{
+                    font-family: "Dosis", sans-serif;
+                    font-size: .9375rem;
+                    font-weight: 600;
+                }
+                .gif{
+                    margin-top: 20px;
+                    img{
+                        width: 261px;
+                    }
+                }
+            }
+            .tags{
+                padding: 3px 4px;
+                h4{
+                    font-family: "Dosis", sans-serif;
+                    font-size: 16px;
+                    font-weight: 600;
+                }
+                .tagsDiv{
+                    a{
+                        text-decoration: none;
+                        border: 1px solid #edeef5;
+                        text-align: center;
+                        padding: 4px 11px;
+                        margin-top: 10px;
+                        line-height: 35px;
+                        
+                        span{
+                            font-family: "Inter", sans-serif;
+                            font-size: 14px;
+                            color: black;
+                        }
+                    }
+                }
+            }
         }
     }
 }
