--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -570,7 +570,7 @@
 .row .mainDiv {
   margin-top: 60px;
   width: 540px;
-  height: 535px;
+  height: 555px;
   border: 1px solid #e4e5ee;
   border-radius: 7px;
   position: relative;
@@ -632,6 +632,16 @@
   font-size: 12px;
   padding: 13px;
 }
+.row .mainDiv .formReg .warningReg {
+  height: 50px;
+  border: 1px solid red;
+  background-color: white;
+  margin-top: 10px;
+  padding: 10px 8px;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  color: red;
+}
 .row .mainDiv .formLog {
   padding: 40px 60px;
   position: absolute;
@@ -666,6 +676,16 @@
   border-radius: 4px;
   font-size: 12px;
   padding: 13px;
+}
+.row .mainDiv .formLog .warning {
+  height: 50px;
+  border: 1px solid red;
+  background-color: white;
+  margin-top: 10px;
+  padding: 10px 8px;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  color: red;
 }
 .row .mainDiv .formLog .lost a:hover span {
   text-decoration: underline;
