--- a/assets/scss/login.scss
+++ b/assets/scss/login.scss
@@ -613,7 +613,7 @@
     .mainDiv{
         margin-top: 60px;
         width: 540px;
-        height: 535px;
+        height: 555px;
         border: 1px solid #e4e5ee;
         border-radius: 7px;
         position: relative;
@@ -681,6 +681,16 @@
                 font-size: 12px;
                 padding: 13px;
             }
+            .warningReg{
+                height: 50px;
+                border: 1px solid red;
+                background-color: white;
+                margin-top: 10px;
+                padding: 10px 8px;
+                font-family: "Inter", sans-serif;
+                font-weight: 500;
+                color: red;
+            }
         }
 
 
@@ -720,6 +730,16 @@
                 border-radius: 4px;
                 font-size: 12px;
                 padding: 13px;
+            }
+            .warning{
+                height: 50px;
+                border: 1px solid red;
+                background-color: white;
+                margin-top: 10px;
+                padding: 10px 8px;
+                font-family: "Inter", sans-serif;
+                font-weight: 500;
+                color: red;
             }
             .lost{
                 a:hover span{
