--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -769,6 +769,10 @@
                     background-color: #ed174a;
                     margin-left: 7px;
                     border-radius: 8px;
+                    padding: 7px 12px;
+                    color: white;
+                    font-family: "Dosis", sans-serif;
+                    font-size: 24px;
                 }
                 p{
                     margin-top: 10px;
@@ -895,6 +899,21 @@
         .col-12{
             padding: 0px 11px;
             margin-left: 0px;
+            .addBtn{
+                button{
+                    margin-top: 20px;
+                    margin-left: 21px;
+                    padding: 4px 47px;
+                    border-radius: 17px;
+                    background-color: #233a95;
+                    border: none;
+                    font-family: "Inter", sans-serif;
+                    font-size: 14px;
+                    opacity: 0;
+                }
+            }
+            
+            
             .col-4{
                 .italian{
                     border: 1px solid #dbdce0;
@@ -1441,6 +1460,16 @@
     }
 
 }
+
+.hover{
+    .col-12{
+        height: 438px;
+        button{
+            opacity: 1;
+        }
+    }
+}
+
 
 .banner{
     .col-6{
@@ -2120,6 +2149,7 @@
     }
 }
 
+
 .pictures{
     .row{
         width: 100%;
@@ -2128,22 +2158,14 @@
    
     .col{
        
-<<<<<<< HEAD
         width: 352px;
-=======
-        width: 400px;
->>>>>>> 55a99f343e795e67c79c3bc153d690b0f3f812a8
         height: 218px;
         margin-left: 20px;
         position: relative;
         
 
         img{
-<<<<<<< HEAD
             width: 347px;
-=======
-            width: 370px;
->>>>>>> 55a99f343e795e67c79c3bc153d690b0f3f812a8
             border-radius: 7px;
         }
 
@@ -2193,11 +2215,7 @@
     }
     .col{
         
-<<<<<<< HEAD
         width: 352px;
-=======
-        width: 400px;
->>>>>>> 55a99f343e795e67c79c3bc153d690b0f3f812a8
         height: 218px;
         margin-left: 20px;
         
@@ -2208,12 +2226,8 @@
                 color: #bbc0c8;
                 font-size: 14px;
                 font-family: "Dosis", sans-serif;
-<<<<<<< HEAD
                 margin-top: -8px;
                 margin-left: 10px;
-=======
-                margin-top: 17px;
->>>>>>> 55a99f343e795e67c79c3bc153d690b0f3f812a8
             }
             
         }
@@ -2224,30 +2238,20 @@
                 font-family: "Inter", sans-serif;
                 color: black;
                 margin-top: -35px;
-<<<<<<< HEAD
                 margin-left: 6px;
 
-=======
->>>>>>> 55a99f343e795e67c79c3bc153d690b0f3f812a8
             }
         }
         a{
             text-decoration: none;
-<<<<<<< HEAD
             margin-left: 1px;
-=======
-            margin-left: -5px;
->>>>>>> 55a99f343e795e67c79c3bc153d690b0f3f812a8
             span{
                 color: #71778e;
                 font-size: 14px;
                 font-family: "Inter", sans-serif;
                 margin-left: 10px;
-<<<<<<< HEAD
                 
 
-=======
->>>>>>> 55a99f343e795e67c79c3bc153d690b0f3f812a8
             }
         }
         a{
@@ -2257,11 +2261,7 @@
                 font-size: 14px;
                 font-family: "Inter", sans-serif;
                 
-<<<<<<< HEAD
                 margin-left: 10px;
-=======
-                margin-left: 5px;
->>>>>>> 55a99f343e795e67c79c3bc153d690b0f3f812a8
                 font-weight: 500;
             }
         }
@@ -2281,11 +2281,7 @@
         
 
         img{
-<<<<<<< HEAD
             width: 347px;
-=======
-            width: 370px;
->>>>>>> 55a99f343e795e67c79c3bc153d690b0f3f812a8
             border-radius: 7px;
         }
         
@@ -2294,7 +2290,6 @@
 }
 
 
-<<<<<<< HEAD
 
 .footer-container {
     margin-top: 250px;
@@ -2531,9 +2526,6 @@
     display: flex;
     justify-content: space-between;
   }
-=======
->>>>>>> 55a99f343e795e67c79c3bc153d690b0f3f812a8
-
 
 
 
